syntax = "proto3";


package FieldMessage;


message IntFieldList {
  repeated IntField fieldList = 1;
}

message IntField {
  uint32 delta = 1;
  uint32 fieldValue = 2;
}


message StrFieldList {
    repeated StrField fieldList = 1;
}

message StrField {
    uint32 delta = 1;
    string fieldValue = 2;
}